fix wrapping

--- a/src/components/products/product-slug.module.scss
+++ b/src/components/products/product-slug.module.scss
@@ -120,6 +120,7 @@
 .product-category-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
